# esbook

./: .dockerignore  .env.dist  .env.example  .gitignore  .travis.yml  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  setup.cfg
logstash/pipeline/: logstash.conf
nginx/: Dockerfile  default.conf
src/: config.py  db.py  gunicorn.conf.py  manage.py  tasks.py
src/author/: models.py  schemes.py  services.py
src/author/api/: router.py
src/author/api/v1/: router.py  views.py
src/book/: models.py  schemes.py  services.py
src/book/api/: router.py
src/book/api/v1/: router.py  views.py
src/esbook/: helpers.py  models_mixins.py  schemes.py  utils.py
src/esbook/commands/: helpers.py  import_books_from_elsevier.py  migrate_books_to_es.py  test_data.py
src/migrations/versions/: 04a1e818fcef_.py
src/search/: helpers.py  mapping.py  services.py  utils.py
src/search/api/: router.py
src/search/api/v1/: router.py  views.py
tests/: __init__.py  factories.py  test_books_api_v1.py
