[tool.poetry]
name = "esbook"
version = "0.2.0"
description = "The REST API platform that provides search within millions of books."
authors = ["gixproject <viacheslavlab@gmail.com>"]

[tool.black]
line-length = 88
target-version = ["py38"]
exclude = """__pycache__"""
diff = 1
color = 1

[tool.poetry.dependencies]
python = "3.8.2"
flask = "^1.1.2"
elasticsearch = "^7.8.0"
Flask-SQLAlchemy = "^2.4.3"
Flask-Script = "^2.0.6"
Flask-Migrate = "^2.5.3"
psycopg2 = "^2.8.5"
passlib = "^1.7.2"
psycopg2-binary = "^2.8.5"
flask-restplus = "^0.13.0"
Werkzeug = "0.16.1"
marshmallow = "^3.8.0"
flask-marshmallow = "^0.14.0"
marshmallow-sqlalchemy = "^0.23.1"
Faker = "^4.16.0"
factory-boy = "3.0.1"
invoke = "^1.4.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.3"
flake8 = "^3.8.4"
black = "^20.8b1"
pytest = "^6.1.2"
flake8-print = "^4.0.0"
flake8-quotes = "^3.2.0"
flake8-eradicate = "^1.0.0"
pep8-naming = "^0.11.1"
flake8-functions = "^0.0.4"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
